# rpa-reclutamiento

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  main_base_propia.py  main_exporters.py  pyproject.toml
src/application/: services.py
src/domain/: interfaces.py  models.py
src/infraestructura/: logging.py
src/infraestructura/persistence/: csv_exporter.py  json_exporter.py  toml_exporter.py  toon_exporter.py
src/infraestructura/scrapers/: factory.py  occ_scraper.py  pandape_base_propia_scraper.py  pandape_scraper.py
src/ui/: app.py
