[project]
name = "automatizador-reclutamiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "streamlit>=1.53.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
targe-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
